# fmod-rs

./: .gitattributes  .gitignore  Cargo.toml  DEVNOTES.md  FMOD_LICENSE.txt  README.md  SOUNDNESS.md  carcinize.nu  docgen.kdl  rebindgen.nu  rustfmt.toml  transpile.rs
crates/fmod-build-helper/: Cargo.toml
crates/fmod-build-helper/src/: lib.rs
crates/fmod-core-sys/: Cargo.toml  LICENSE.txt  README.md  build.rs  transpile.rs
crates/fmod-core-sys/inc/: bindings.rs  generate-bindings.nu  generate-bindings.sh
crates/fmod-core-sys/src/: lib.rs
crates/fmod-core-sys/src/inc/: .gitattributes  fmod.rs  fmod_codec.rs  fmod_common.rs  fmod_dsp.rs  fmod_dsp_effects.rs  fmod_errors.rs  fmod_output.rs
crates/fmod-fsbank-sys/: Cargo.toml  README.md  build.rs
crates/fmod-fsbank-sys/inc/: bindings.rs  generate-bindings.nu
crates/fmod-fsbank-sys/src/: lib.rs
crates/fmod-rs/: Cargo.toml  build.rs
crates/fmod-rs/src/: error.rs  handle.rs  lib.rs  macros.rs  utils.rs
crates/fmod-rs/src/common/: c.rs  enums.rs  flags.rs  mod.rs  structs.rs
crates/fmod-rs/src/core/: README.md  channel.rs  channel_control.rs  channel_group.rs  debug.rs  dsp.rs  dsp_connection.rs  effect.rs  ex.rs  file.rs  general.rs  geometry.rs  globals.rs  handle.rs  ios.rs  memory.rs  mod.rs  reverb_3d.rs  sound.rs  sound_group.rs  system.rs  thread.rs
crates/fmod-rs/src/core/channel/: general.rs  information.rs  mod.rs  playback.rs
crates/fmod-rs/src/core/channel_control/: dsp.rs  filtering.rs  general.rs  mod.rs  panning.rs  playback.rs  scheduling.rs  spatialization.rs  volume.rs
crates/fmod-rs/src/core/channel_group/: channel.rs  general.rs  group.rs  mod.rs
crates/fmod-rs/src/core/common/: debug.rs  enums.rs  file.rs  flags.rs  general.rs  memory.rs  mix.rs  mod.rs  structs.rs  thread.rs
crates/fmod-rs/src/core/dsp/: channel.rs  connections.rs  general.rs  metering.rs  mod.rs  parameters.rs  processing.rs
crates/fmod-rs/src/core/dsp/effect/: parameters.rs  types.rs
crates/fmod-rs/src/core/dsp_connection/: general.rs  mix.rs  mod.rs
crates/fmod-rs/src/core/effect/: mod.rs
crates/fmod-rs/src/core/geometry/: general.rs  mod.rs  polygons.rs  spatialization.rs
crates/fmod-rs/src/core/plugins/: codec.rs  dsp.rs  mod.rs  output.rs
crates/fmod-rs/src/core/reverb3d/: general.rs  mod.rs
crates/fmod-rs/src/core/reverb_3d/: mod.rs
crates/fmod-rs/src/core/sound/: data.rs  default.rs  format.rs  general.rs  mod.rs  music.rs  relationship.rs  synchronization.rs
crates/fmod-rs/src/core/sound_group/: general.rs  group.rs  mod.rs  sound.rs
crates/fmod-rs/src/core/system/: creation.rs  device.rs  ex.rs  file.rs  general.rs  geometry.rs  information.rs  lifetime.rs  network.rs  plugin.rs  recording.rs  runtime.rs  setup.rs
crates/fmod-rs/src/fsbank/: README.md
crates/fmod-rs/src/platform/: Android.md  Linux.md  UWP.md  Windows.md  iOS.md  macOS.md  mod.rs
crates/fmod-rs/src/studio/: README.md  mod.rs
crates/fmod-studio-sys/: Cargo.toml  README.md  build.rs
crates/fmod-studio-sys/inc/: .gitattributes  bindings.rs  fmod.h  fmod.hpp  fmod_codec.h  fmod_common.h  fmod_dsp.h  fmod_dsp_effects.h  fmod_dsp_errors.h  fmod_dsp_output.h  fmod_errors.h  fmod_output.h  generate-bindings.nu  generate-bindings.sh
crates/fmod-studio-sys/src/: lib.rs
crates/fmod-studio-sys/src/inc/: fmod_studio.rs  fmod_studio_common.rs
examples/: .gitignore  Cargo.toml  README.md  build.rs
examples/examples/: 3d.rs  async_io.rs  channel_groups.rs  convolution_reverb.rs  dsp_custom.rs  dsp_effect_per_speaker.rs  dsp_inspector.rs  effects.rs  gapless_playback.rs  generate_tone.rs  granular_synth.rs  multiple_system.rs  play_sound.rs  sequential_system.rs  test.rs
examples/framework/: Cargo.toml
examples/framework/src/: lib.rs
examples/play-sound/: Cargo.toml
examples/play-sound/src/: main.rs
examples/src/: lib.rs
media/: Dialogue_CN.bank  Dialogue_EN.bank  Dialogue_JP.bank  Master.bank  Master.strings.bank  Music.bank  SFX.bank  VO.bank  Vehicles.bank  programmer_sound.fsb  wave_vorbis.fsb
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/docgen/: config.rs  fmod2rustdoc.rs  mod.rs
