[package]
name = "fmod-examples"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.71"
bitflags = "2.3.1"
crossterm = "0.26.1"
fmod-rs = { path = "../crates/fmod-rs" }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
once_cell = "1.17.2"
