[package]
name = "fmod-examples"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.72"
bitflags = "2.3.3"
crossterm = "0.27.0"
fmod-rs = { path = "../crates/fmod-rs", features = ["link-search"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-panic = "0.1.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
once_cell = "1.18.0"

[build-dependencies]
build-rs = "0.1.2"
fs_extra = "1.3.0"
