[package]
name = "fmod-examples"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
bitflags = "2.5.0"
crossterm = "0.27.0"
fmod-rs = { path = "../crates/fmod-rs" }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-panic = "0.1.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# fmod-core-sys = { version = "2.3.5-ea", path = "../crates/fmod-core-sys" } # for $DEP_FMOD_API

[dev-dependencies]
once_cell = "1.19.0"
rand = "0.8.5"

[build-dependencies]
fs_extra = "1.3.0"
