[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
html5ever = "0.26.0"                                 # match markup5ever
itertools = "0.11.0"
knuffel = "3.2.0"
markup5ever_rcdom = "0.2.0"
miette = { version = "5.10.0", features = ["fancy"] }
once_cell = "1.18.0"
regex = "1.9.3"
smartstring = "1.0.1"
thiserror = "1.0.44"
