[package]
name = "fmod-build-helper"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"

description = "Build helper for FMOD Engine bindings"
repository = "https://github.com/CAD97/fmod-rs"
keywords = []
categories = ["development-tools::build-utils", "development-tools::ffi"]

[dependencies]
build-rs.workspace = true
regex.workspace = true

[target.'cfg(windows)'.dependencies]
winreg = "0.15.0" # use winapi version for faster compile
