[package]
name = "fmod-core-sys"
version = "2.3.5-ea+2.03.05-148280"
edition = "2021"
rust-version = "1.84"
license-file = "LICENSE.txt"
links = "fmod"

description = "FMOD Core bindings"
repository = "https://github.com/CAD97/fmod-rs"
keywords = ["gamedev", "audio", "sound", "fmod", "adaptive audio"]
categories = ["external-ffi-bindings", "game-development", "multimedia::audio"]

include = [
    "/src/lib.rs",
    "/src/inc/*.rs",
    "/build.rs",
    "/Cargo.toml",
    "/LICENSE.txt",
    "/README.md",
]

[build-dependencies]
build-rs = "0.1.2"

[target.'cfg(windows)'.build-dependencies]
winreg = "0.55.0"
