[package]
name = "fmod-fsbank-sys"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license-file = "LICENSE.txt"
links = "fsbank"

description = "FMOD FSBank bindings"
repository = "https://github.com/CAD97/fmod-rs"
keywords = ["gamedev", "audio", "sound", "fmod", "adaptive-audio"]
categories = ["external-ffi-bindings", "game-development", "multimedia::audio"]

[dependencies]
fmod-core-sys.workspace = true # WEIRD: this is unused other than DEP_FMOD_*

[build-dependencies]
build-rs.workspace = true
regex.workspace = true

[target.'cfg(windows)'.build-dependencies]
winreg.workspace = true
