[package]
name = "fmod-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
license = "MIT OR Apache-2.0"

publish = false
description = "Bindings to the FMOD adaptive audio engine"
repository = "https://github.com/CAD97/fmod-rs"
keywords = ["gamedev", "audio", "sound", "fmod", "adaptive audio"]
categories = ["api-bindings", "game-development", "multimedia::audio"]

[lib]
name = "fmod"

[features]
default = ["core", "log"]

#! ## Feature flags

## Enable the FMOD Core API.
core = ["dep:fmod-core-sys"]

## Enable the FMOD Studio API.
studio = ["dep:fmod-studio-sys", "core"]

## Enable the FMOD FSBank API.
fsbank = ["dep:fmod-fsbank-sys"]

## Enable recording FMOD debug logs using the log crate.
log = ["dep:log"]

## Enable math interoperability via the mint crate.
mint = ["dep:mint"]

## Enable access to the raw FMOD API calls.
raw = []

#! ### Experimental feature flags
#!
#! These features can change public API and can change at any time. Be warned!

## Use unstable Rust features for the safe API. Currently, this means to:
## - Use `feature(extern_type)` for FMOD resource types.
## - Use `feature(doc_auto_cfg, doc_cfg)` to display cfg gates in documentation.
## - Use `feature(core_io_borrowed_buf, read_buf)` to elide some defensively duplicated stack buffers.
## - Use `feature(trait_alias)` for the `ChannelControlCallback` trait alias.
unstable = []

[dependencies]
fmod-core-sys = { workspace = true, optional = true }
fmod-fsbank-sys = { workspace = true, optional = true }
fmod-studio-sys = { workspace = true, optional = true }

bytemuck = { version = "1.16.1", features = [
    "derive",
    "extern_crate_std",
    "min_const_generics",
] }
cstr8 = "0.1.4"
cool_asserts = "2.0.3"
document-features = "0.2.8"
parking_lot = "0.12.3"
paste = "1.0.15"
smart-default = "0.7.1"
zerocopy = { version = "0.8.14", features = ["std", "derive"] }

log = { version = "0.4.21", optional = true }
mint = { version = "0.5.9", optional = true }

[build-dependencies]
build-rs = "0.1.2"
