[package]
name = "fmod-rs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"

publish = false
description = "Bindings to the FMOD adaptive audio engine"
repository = "https://github.com/CAD97/fmod-rs"
keywords = ["gamedev", "audio", "sound", "fmod", "adaptive audio"]
categories = ["api-bindings", "game-development", "multimedia::audio"]

[lib]
name = "fmod"

[features]
default = ["core", "log"]
_ide_default = [
    "default",
    "studio",
    "fsbank",
    "mint",
    "raw",
    "unstable_doc_cfg",
    "unstable_sized_hierarchy",
    "unstable_read_buf",
    "unstable_trait_alias",
]

#! ## Feature flags

## Enable the FMOD Core API.
core = ["dep:fmod-core-sys"]

## Enable the FMOD Studio API.
studio = ["dep:fmod-studio-sys", "core"]

## Enable the FMOD FSBank API.
fsbank = ["dep:fmod-fsbank-sys"]

## Enable recording FMOD debug logs using the log crate.
log = ["dep:log"]

## Enable math interoperability via the mint crate.
mint = ["dep:mint"]

## Enable access to the raw FMOD API calls.
raw = []

# Use bundled (pregenerated) raw bindings. For documentation builds only.
_use_bundled_bindings_for_docs = ["dep:fmod-rs-sys-for-doc"]

#! ### Experimental feature flags
#!
#! These features can change public API and can change at any time. Be warned!

## Enable all unstable feature flags.
unstable = [
    "unstable_doc_cfg",
    # "unstable_extern_type",
    "unstable_sized_hierarchy",
    "unstable_read_buf",
    "unstable_trait_alias",
    "unstable_ub_checks",
]

## Use `#[doc(cfg())]` to display cfg gates in documentation.
unstable_doc_cfg = []
# ## Use extern types for FMOD resource types. (Removes `impl Deref for Handle`)
# unstable_extern_type = ["unstable_sized_hierarchy"]
## Use `PointeeSized` to support types that do not have a known size.
unstable_sized_hierarchy = []
## Use `Read::read_buf` to elide some otherwise unnecessary copies.
unstable_read_buf = []
## Make `ChannelControlCallback` a proper trait alias.
unstable_trait_alias = []
## Use `assert_unsafe_precondition!` where possible instead of `debug_assert!`.
unstable_ub_checks = []

[dependencies]
fmod-core-sys = { workspace = true, optional = true }
fmod-fsbank-sys = { workspace = true, optional = true }
fmod-studio-sys = { workspace = true, optional = true }

# should match the fallback in build.rs
fmod-rs-sys-for-doc = { version = "=2.3.12", optional = true }

cool_asserts = "2.0.3"
document-features = "0.2.8"
parking_lot = "0.12.3"
paste = "1.0.15"
smallvec = { version = "1.15.1", features = ["const_generics", "union"] }
smart-default = "0.7.1"
zerocopy = { version = "0.8.14", features = ["std", "derive"] }

log = { package = "log", version = "0.4.21", optional = true }
mint = { version = "0.5.9", optional = true }

[build-dependencies]
build-rs.workspace = true

[package.metadata.docs.rs]
all-features = true
targets = []
rustdoc-args = ["--extend-css", "crates/fmod-rs/rustdoc.css"]
