[package]
name = "fmod-studio-sys"
version = "2.22.0+2.02.22-142841"
edition = "2021"
rust-version = "1.77"
license-file = "LICENSE.txt"
links = "fmodstudio"

description = "FMOD Studio bindings"
repository = "https://github.com/CAD97/fmod-rs"
keywords = ["gamedev", "audio", "sound", "fmod", "adaptive audio"]
categories = ["external-ffi-bindings", "game-development", "multimedia::audio"]

include = [
    "/inc/bindings.rs",
    "/src/lib.rs",
    "/build.rs",
    "/Cargo.toml",
    "/LICENSE.txt",
    "/README.md",
]

[dependencies]
fmod-core-sys = { version = "=2.22.0", path = "../fmod-core-sys" }

[build-dependencies]
build-rs = "0.1.2"

[features]
link-search = []
