[package]
name = "fmod-studio-sys"
version = "2.3.5-ea+2.03.05-148280"
edition = "2021"
rust-version = "1.84"
license-file = "LICENSE.txt"
links = "fmodstudio"

description = "FMOD Studio bindings"
repository = "https://github.com/CAD97/fmod-rs"
keywords = ["gamedev", "audio", "sound", "fmod", "adaptive audio"]
categories = ["external-ffi-bindings", "game-development", "multimedia::audio"]

include = [
    "/src/lib.rs",
    "/src/inc/*.rs",
    "/build.rs",
    "/Cargo.toml",
    "/LICENSE.txt",
    "/README.md",
]

[dependencies]
fmod-core-sys = { version = "=2.3.5-ea", path = "../fmod-core-sys" }
