[package]
name = "fmod-studio-sys"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license-file = "LICENSE.txt"
links = "fmodstudio"

description = "FMOD Studio bindings"
repository = "https://github.com/CAD97/fmod-rs"
keywords = ["gamedev", "audio", "sound", "fmod", "adaptive-audio"]
categories = ["external-ffi-bindings", "game-development", "multimedia::audio"]

[build-dependencies]
build-rs.workspace = true
regex.workspace = true

[dependencies]
fmod-core-sys.workspace = true
